Prevent long strings from overflowing

--- a/public/styles/all-records.css
+++ b/public/styles/all-records.css
@@ -30,6 +30,8 @@ main > a {
 .text > h3 {
   color: black;
   font-size: 1.5rem;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .text > img {
